# oc-openmp-histogram

./: .gitignore  CMakeLists.txt  README.md  histogram.c  histogram.h  main.c
